--- a/src/components/Layouts/components/DashbroadMenu/DashbroadMenu.module.css
+++ b/src/components/Layouts/components/DashbroadMenu/DashbroadMenu.module.css
@@ -4,25 +4,25 @@
    margin-top: 10px;
 }
 
-.selectMenu:hover .listMenu {
-   display: block;
+.groupTitle {
+   width: 100%;
+   height: 40px;
+   padding: 10px 20px 10px 10px;
+   display: flex;
+   align-items: center;
+   background-color: #dfdfdf;
+   font-size: 1.4rem;
+   border-radius: 20px;
+   cursor: pointer;
+   color: #007070;
 }
 
 .menuTitle {
    width: 100%;
-   height: 40px;
-   padding: 10px;
+   height: 100%;
    display: flex;
+   justify-content: space-between;
    align-items: center;
-   background-color: #dfdfdf;
-   border-radius: 20px;
-   cursor: pointer;
-   color: #007070;
-   font-size: 1.4rem;
-}
-
-.menuTitle:hover {
-   background-color: #d3d3d3;
 }
 
 .menuIcon {
@@ -40,7 +40,7 @@
    position: relative;
    transform-origin: top center;
    cursor: pointer;
-   display: none;
+   transition: all 0.7s ease-in;
 }
 
 .menuOption {
@@ -57,4 +57,8 @@
 
 .menuOption:last-child {
    border-bottom: none;
+}
+
+h3 i {
+   transition: transform 0.3s ease;
 }
