--- a/src/pages/components/InputValue/InputValue.module.css
+++ b/src/pages/components/InputValue/InputValue.module.css
@@ -1,10 +1,11 @@
-.groupInut {
+.groupInput {
    width: 100%;
    display: flex;
    flex-direction: column;
 }
 
 .labelInput {
+   width: 100%;
    padding-left: 10px;
 }
 
@@ -21,5 +22,6 @@
 }
 
 .labelMessage {
+   width: 100%;
    color: red;
 }
