--- a/src/components/Layouts/components/Login/Login.module.css
+++ b/src/components/Layouts/components/Login/Login.module.css
@@ -18,6 +18,7 @@
    border-radius: 20px;
    display: flex;
    justify-content: space-between;
+   position: relative;
    background-color: #fff;
    overflow: hidden;
    font-size: 1.5rem;
@@ -33,7 +34,20 @@
    justify-content: space-between;
    padding: 40px 40px;
    color: #242424;
-   animation: slideLeftToRight 0.4s linear;
+   animation: slideLeftToRightLogin 0.6s ease-in;
+}
+
+.registerInfo {
+   width: 50%;
+   height: 100%;
+   display: flex;
+   flex-direction: column;
+   justify-content: space-between;
+   position: absolute;
+   right: 0px;
+   padding: 8px 40px;
+   color: #242424;
+   animation: slideLeftToRightRegister 0.6s ease-in;
 }
 
 .title {
@@ -90,40 +104,57 @@
    height: 20px;
    margin-top: 10px;
    text-align: center;
+   display: flex;
+   justify-content: center;
 }
 
 .switchFormLink {
+   margin-left: 5px;
    text-decoration: none;
    color: #024252;
+   cursor: pointer;
 }
 
 /*WELLCOME*/
 .wellcome {
    width: 400px;
-   height: 650px;
-   position: relative;
-   left: 90px;
-   bottom: 145px;
+   height: 1500px;
+   position: absolute;
+   display: flex;
    background-color: var(--primary-background-color);
-   transform: rotate(-30deg);
-   animation: slideRightToLeft 0.4s linear;
 }
 
-.wellcomeContent {
+.wellcomeBack {
    width: 305px;
    height: 250px;
    padding: 0px 40px 0px 0px;
+   transform: rotate(30deg);
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: end;
-   transform: rotate(30deg);
    position: relative;
-   top: 200px;
+   top: 1080px;
    color: #242424;
+   animation: slideRightToLeftWellComeBack 0.6s ease-in;
 }
 
-.contentTitle {
+.loginContent {
+   left: 240px;
+   bottom: -120px;
+   transform: rotate(-30deg);
+   transition: all 0.4s linear;
+}
+
+.registerContent {
+   left: 540px;
+   bottom: -210px;
+   transform-origin: left center;
+   transform: rotate(-150deg);
+   transition: all 0.4s linear;
+}
+
+.wellcomeBackTitle {
    width: 100%;
    height: 90px;
    font-size: 4rem;
@@ -131,12 +162,41 @@
    text-align: right;
 }
 
-.contentDescription {
+.wellcomeBackDescription {
    width: 150px;
    height: auto;
    text-align: right;
 }
 
+.wellcomeTo {
+   width: 305px;
+   height: 250px;
+   padding: 0px 40px 0px 0px;
+   transform: rotate(150deg);
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: start;
+   position: relative;
+   top: 180px;
+   left: -20px;
+   color: #242424;
+   animation: slideRightToLeftRegister 0.6s ease-in;
+}
+
+.wellcomeToTitle {
+   width: 100%;
+   height: 90px;
+   font-size: 4rem;
+   line-height: 40px;
+   text-align: left;
+}
+
+.wellcomeToDescription {
+   width: 150px;
+   height: auto;
+   text-align: left;
+}
 /* ANIMATION */
 
 @keyframes zoomIn {
@@ -148,18 +208,36 @@
    }
 }
 
-@keyframes slideRightToLeft {
+@keyframes slideRightToLeftWellComeBack {
    from {
-      transform: translateX(500px);
+      transform: rotate(30deg) translateX(500px);
+   }
+   to {
+      transform: rotate(30deg) translateX(0px);
+   }
+}
+
+@keyframes slideLeftToRightLogin {
+   from {
+      transform: translateX(-500px);
    }
    to {
       transform: translateX(0px);
    }
 }
 
-@keyframes slideLeftToRight {
+@keyframes slideRightToLeftRegister {
    from {
-      transform: translateX(-500px);
+      transform: rotate(150deg) translateX(-500px);
+   }
+   to {
+      transform: rotate(150deg) translateX(0px);
+   }
+}
+
+@keyframes slideLeftToRightRegister {
+   from {
+      transform: translateX(500px);
    }
    to {
       transform: translateX(0px);
