--- a/src/pages/components/ProductDetail/ProductDetail.module.css
+++ b/src/pages/components/ProductDetail/ProductDetail.module.css
@@ -101,9 +101,14 @@
 
 .groupProductColor {
    width: 100%;
-   height: 40px;
    display: flex;
    align-items: center;
+   margin-top: 20px;
+   padding: 0px 10px;
+}
+
+.groupProductColor strong {
+   margin-right: 10px;
 }
 
 .productColor {
@@ -121,6 +126,24 @@
    height: 20px;
    border-radius: 50%;
    margin-right: 10px;
+}
+
+.groupProductQuantity {
+   width: 100%;
+   height: 70px;
+   display: flex;
+   align-items: center;
+   padding: 20px 10px;
+   display: flex;
+   align-items: center;
+}
+
+.groupProductQuantity strong {
+   margin-right: 10px;
+}
+
+.availableQuantity {
+   margin-left: 10px;
 }
 
 .productName {
