--- a/src/pages/components/PrintInvoice/PrintInvoice.module.css
+++ b/src/pages/components/PrintInvoice/PrintInvoice.module.css
@@ -23,6 +23,10 @@
    margin-right: 10px;
 }
 
+.address {
+   text-align: center;
+}
+
 .title {
    text-align: center;
 }
@@ -36,11 +40,16 @@
 }
 
 .tableDiscount {
+   width: 100%;
    margin-bottom: 10px;
 }
 
 .tableDiscount tr th:last-child {
    width: 200px;
+}
+
+.tableProduct {
+   width: 100%;
 }
 
 .tableProduct tr th {
